agregada meta descrption

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo ico.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Con mas de 15 años de experiencia en el rubro, llevamos nuestra identidad galesa a su estancia en el valle chubutense. Reserve ahora mismo alguna de nuestras habitaciones!">
     <script src="https://kit.fontawesome.com/53f544d1dd.js" crossorigin="anonymous" defer></script>
     <title>Ffarm Taid</title>
   </head>
